[package]
name = "freedroid"
version = "0.1.0"
authors = ["Edoardo Morandi <morandidodo@gmail.com>"]
edition = "2018"
license = "GPL-2.0-or-later"

[features]
arcade-input = []
gcw0 = []

[dependencies]
bitflags = "1.2.1"
chrono = "0.4.19"
cstr = "0.2.5"
env_logger = "0.8.1"
libc = "0.2.80"
log = "0.4.11"
once_cell = "1.5.2"
sdl = "0.3.6"
static_assertions = "1.1.0"

[build-dependencies]
cc = "1.0.61"
pkg-config = "0.3.19"
