[workspace]
resolver = "2"
members = [
    "freedroid",
    "sdl-sys",
    "sdl",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Edoardo Morandi <morandidodo@gmail.com>"]

[workspace.dependencies]
bitflags = "2.3.1"
cstr = "0.2.9"
log = "0.4.14"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = 0 }
missing_panics_doc = "allow"
missing_errors_doc = "allow"
