[package]
name = "freedroid"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "GPL-2.0-or-later"

[features]
arcade-input = []
gcw0 = []

[dependencies]
android_log-sys = "0.3.0"
arrayvec = "0.7.4"
bitflags.workspace = true
bstr = "1.5.0"
chrono = "0.4.19"
clap = { version = "4.3.0", features = ["derive", "cargo"] }
cstr.workspace = true
env_logger = "0.10.0"
log.workspace = true
nom = "7.1.1"
once_cell = "1.9.0"
qcell = "0.5.0"
rand = "0.8.4"
sdl = { path = "../sdl" }
sdl-sys = { path = "../sdl-sys" }

[lints]
workspace = true
