[package]
name = "sdl"
version = "0.1.0"
edition = "2021"
build = "build/main.rs"

[dependencies]
bitflags = "1.2.1"
cstr = "0.2"
num-traits = "0.2.14"
once_cell = "1.8.0"
sdl-sys = { path = "../sdl-sys" }
thiserror = "1.0.26"
#x11lib = { package = "x11", version = "2", features = ["xlib"] }

[build-dependencies]
cc = "1.0.72"
pkg-config = "0.3.24"
