[package]
name = "sdl"
version.workspace = true
edition.workspace = true
authors.workspace = true
build = "build/main.rs"

[dependencies]
bitflags.workspace = true
cstr.workspace = true
log.workspace = true
num-traits = "0.2.14"
once_cell = "1.9.0"
sdl-sys = { path = "../sdl-sys" }
thiserror = "1.0.30"

[build-dependencies]
cc = "1.0.72"
pkg-config = "0.3.24"
